Remove unneeded classes Convert some classes to records Add immutability to collections held in record classes
Signed-off-by: Mohit Godwani <mgodwan@amazon.com>